# predict_llm_memorization

./: .gitignore  .pre-commit-config.yaml  CITATION.cff  README.md  pyproject.toml  requirements.txt
.github/: CONTRIBUTING.md  dev_requirements.txt
.github/workflows/: ci.yaml
configs/: .gitignore  deployment.cfg  env_vars.cfg  main.cfg  training.cfg
experiments/: README.md
experiments/heavy_tail/: explore.ipynb  utils_datasets.py  utils_models.py
figures/: 01_main_figures.ipynb  02_appendix_figures.ipynb  03_compare_memorization.ipynb  04_dynamics.ipynb
grokking_llm/: __init__.py  __main__.py
grokking_llm/deploy/: __init__.py  clean.py  cpu.py  deployment_cfg.py  exec_deploy.py  gpu.py  prepare.py  prepare_deploy.py  utils.py
grokking_llm/measures/: __init__.py  dynamic_metrics_group.py  forward_metrics.py  general_metrics.py  individual_metrics.py  main.py  memo_logit_gap_metrics.py  memo_membership_metrics.py  memo_proba_gap.py  memo_proba_gap_metrics.py  metrics.py  p_smi_metrics.py  perf_metrics.py  smi_metrics.py  (+2 more)
notebooks/: 01_test_finetune.ipynb  02-test_load_models.ipynb
scripts/: .gitignore  bind_gpu.sh
tests/: conftest.py  test_deploy_cfg.py  test_deploy_disk_stack.py  test_deploy_prepare.py  test_deploy_stack_disk.py  test_mahalanobis.py  test_measure_dataloaders.py  test_measure_dmg.py  test_measure_forward_values.py  test_measure_smg.py  test_measure_weights_metrics.py  test_paths.py  test_preprocessing.py  test_sample.py  test_train_config.py  test_train_model.py  test_train_preprocessing.py  test_train_trainer.py  test_utils_paths.py
(+277 files in other folders)
