[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "grokking_llm"
description = "A great package."
readme = "README.md"
authors = [
  { name = "Jérémie Dentan", email = "jeremie.dentan@live.com" },
]
maintainers = [
  { name = "Jérémie Dentan", email = "jeremie.dentan@live.com" },
]
license = { file = "LICENSE" }
requires-python = ">=3.8"

dependencies = [
  "numpy>=1.13.3",
  "pandas>=1.5.2",
]

classifiers = [
  "Development Status :: 4 - Beta",
  "License :: OSI Approved :: Apache Software License",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Topic :: Security",
]

[tool.hatch]
version.path = "src/token_package/__init__.py"

[project.urls]
Homepage = "https://github.com/scikit-hep/package"
Documentation = "https://package.readthedocs.io/"
"Bug Tracker" = "https://github.com/scikit-hep/package/issues"
Discussions = "https://github.com/scikit-hep/package/discussions"
Changelog = "https://package.readthedocs.io/en/latest/changelog.html"

[tool.pytest.ini_options]
minversion = "6.0"
addopts = ["-ra", "--showlocals", "--strict-markers", "--strict-config"]
xfail_strict = true
filterwarnings = ["error"]
log_cli_level = "info"
testpaths = ["tests"]
